# amplifier-bundle-diagram-beautifier

./: .gitignore  BACKLOG.md  README.md  bundle.md  pyproject.toml
.amplifier/: settings.yaml
agents/: diagram-beautifier.md
behaviors/: diagram.yaml
context/: diagram-awareness.md
diagram_beautifier/: review.py  verify.py  viewer.py
docs/: diagram-style-guide.md
docs/plans/: 2026-04-08-eval-viewer-design.md
eval/: EVAL_PHILOSOPHY.md
eval/diagrams/: data-platform-architecture.dot  dense-module-dependencies.dot  ecommerce-microservices.dot
recipes/: evaluate-diagrams.yaml
tests/: test_diagram_beautifier_agent.py  test_diagram_review.py  test_diagram_style_guide.py  test_diagram_verify.py  test_diagram_viewer.py  test_diagram_wiring.py
