[project]
name = "diagram-beautifier"
version = "0.1.0"
description = "Diagram beautification package and evaluation harness"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[tool.setuptools]
packages = ["diagram_beautifier"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
